# MinPlay

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bat  build_c.bat  build_tests.bat  design.md  音画同步完整设计方案.txt
.github/workflows/: build.yml
.mimocode/plans/: 1781395903669-eager-lagoon.md  1781433236829-neon-tiger.md
src/: main.c  main.cpp
src/audio_out/: ao_wasapi.c  ao_waveout.c  audio_out.h  audio_output.h  wasapi_audio_output.cpp  wasapi_audio_output.h
src/core/: player.c  player.cpp  player.h  playlist.cpp  playlist.h  source_reader_callback.c  source_reader_callback.cpp  source_reader_callback.h
src/demux/: hls_media_source.cpp  hls_media_source.h  hls_media_stream.cpp  hls_media_stream.h  pes_assembler.cpp  pes_assembler.h  program_manager.cpp  program_manager.h  ts_byte_stream.cpp  ts_byte_stream.h  ts_demuxer.cpp  ts_demuxer.h  ts_packet_parser.cpp  ts_packet_parser.h
src/media/: media_source.c  media_source.cpp  media_source.h
src/network/: hls_stream.cpp  hls_stream.h
src/sync/: hw_clock.c  hw_clock.h  precise_sleep.c  precise_sleep.h  sync.c  sync.h  sync_context.cpp  sync_context.h  sync_debug.c  sync_debug.h
src/tts/: text_reader.cpp  text_reader.h  tts_engine.cpp  tts_engine.h
src/util/: com_ptr.h  log.cpp  log.h  osd.c  osd.cpp  osd.h  yuv_convert.cpp  yuv_convert.h
src/video_out/: d3d11_renderer.c  d3d11_renderer.h  d3d11_video_output.cpp  d3d11_video_output.h  video_out.h  video_output.h  vo_d3d11.c  vo_gdi.c
tests/: audio_test.cpp  hls_test.cpp  minunit.h  player_test.cpp  sync_test.cpp  test_counters.cpp  test_main.cpp  test_ts_demuxer.cpp  test_ts_demuxer_main.cpp
